--- a/DonDuSang/View/MainPage.xaml
+++ b/DonDuSang/View/MainPage.xaml
@@ -1,7 +1,53 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DonDuSang.View.MainPage">
+             xmlns:model="clr-namespace:DonDuSang.Model"
+             xmlns:vm="clr-namespace:DonDuSang.ViewModel"
+             x:DataType="vm:CentresDeDonViewModel"
+             x:Class="DonDuSang.View.MainPage"
+             Title="{Binding Titre}">
 
+  <Grid
+    RowDefinitions="*, Auto"
+    ColumnDefinitions="*,*">
 
+    <CollectionView
+      ItemsSource="{Binding Centres}">
+      <CollectionView.ItemTemplate>
+        <DataTemplate x:DataType="model:CentreDeDon">
+          <HorizontalStackLayout Padding="10" Spacing="15">
+            <Image Source="don_sang.jpg" HeightRequest="100"/>
+            <VerticalStackLayout VerticalOptions="Center">
+              <Label Text="{Binding location_name}" FontSize="24"
+                   TextColor="Grey"/>
+              <Label Text="{Binding location_city}" FontSize="16"
+                   TextColor="Grey"/>
+              <Label Text="{Binding collection_date}" FontSize="16"
+                   TextColor="Grey"/>
+            </VerticalStackLayout>
+          </HorizontalStackLayout>
+        </DataTemplate>
+      </CollectionView.ItemTemplate>
+    </CollectionView>
+    <Button Text="Récupérer les centres"
+            Grid.Row="1"
+            Grid.Column="0"
+            Margin="8"
+            Style="{StaticResource ButtonOutline}"
+            Command="{Binding GetCentresDeDonCommand}"/>
+    <ActivityIndicator IsVisible="{Binding EstOccupé}"
+                       IsRunning="{Binding EstOccupé}"
+                       Grid.RowSpan="2"
+                       Grid.ColumnSpan="2"
+                       HeightRequest="80"
+                       WidthRequest="80"
+                       Color="{StaticResource Primary}"
+                       HorizontalOptions="Center"
+                       VerticalOptions="Center"/>
+  </Grid>
+  
+  
+  
+  
+  
 </ContentPage>
