--- a/DonDuSang/View/DetailsPage.xaml
+++ b/DonDuSang/View/DetailsPage.xaml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DonDuSang.DetailsPage">
+             x:Class="DonDuSang.DetailsPage"
+             xmlns:vm="clr-namespace:DonDuSang.ViewModel"
+             x:DataType="vm:CentreDeDonDetailsViewModel"
+             Title="{Binding CentreDeDon.location_city}">
 </ContentPage>
